[gd_scene load_steps=10 format=2]

[ext_resource path="res://gui/BackgroundPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://thridparty/default.theme" type="Theme" id=2]
[ext_resource path="res://gui/ForegroundPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/deck_builder/DeckBuilder.gd" type="Script" id=4]
[ext_resource path="res://gui/CollectionFilter.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/view/CollectionView.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/CollectionToolbar.tscn" type="PackedScene" id=7]
[ext_resource path="res://thridparty/medium_front.tres" type="DynamicFont" id=8]
[ext_resource path="res://gui/deck_builder/StatsViewer.tscn" type="PackedScene" id=13]

[node name="DeckBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForegroundPanel" parent="BackgroundPanel/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer/ForegroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsViewer" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer" instance=ExtResource( 13 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 659.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="CollectionFilter" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 504.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="VSeparator" type="VSeparator" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer"]
margin_left = 508.0
margin_right = 512.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer"]
margin_left = 516.0
margin_right = 558.0
margin_bottom = 70.0

[node name="TamaCount" type="Label" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 28.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 1 )
text = "0/5"
align = 1

[node name="HSeparator" type="HSeparator" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 42.0
margin_bottom = 37.0

[node name="DeckCount" type="Label" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 42.0
margin_bottom = 69.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 1, 0.0627451, 1 )
text = "0/50"
align = 1

[node name="VSeparator2" type="VSeparator" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer"]
margin_left = 562.0
margin_right = 566.0
margin_bottom = 70.0

[node name="CollectionToolbar" parent="BackgroundPanel/VBoxContainer/ForegroundPanel/HBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 570.0
margin_right = 1014.0
margin_bottom = 70.0

[node name="SplitContainer" type="HSplitContainer" parent="BackgroundPanel/VBoxContainer"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FilteredContainer" parent="BackgroundPanel/VBoxContainer/SplitContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 508.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeckContainer" parent="BackgroundPanel/VBoxContainer/SplitContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_right = 1024.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3
